It work in swagger
